2009-05-27: 11:00 Ali aliov@xfce.org
	*: use G_HAVE_ISO_VARARGS to chech if variadic macro are supported
	*: Fix some English mispelling mistakes in the doc.

2009-05-26 10:00 Ali aliov@xfce.org
	*: Provide the possibility to disable the brightness popup
	indicator in a hidden option.

2009-05-24 15:30 Ali aliov@xfce.org
	*: Fix minor issue of displaying adapter icon on desktop computers
	*: Minor changes in the glade file.

2009-05-21 15:00 Ali aliov@xfce.org
	*: Properly free the inhibitor data when the inhibitor
	*: Don't accept events at all if they were not mapped.
	*: Fix warning button action in the critical notification.
	*: Show the "estimated time to be fully charged" when we have
	relevent estimation.
	*: Fix suspend/hibernate button configuration problem.
	
2009-05-21 10:30 Ali aliov@xfce.org 
	 * : Russian translation updates
	
2009-05-20 10:30
	* :Correct the makefile of the doc
	* :Reduce suspend/hibernate timeout if the user disable screen saver lock

2009-05-19 14:15
	* RC2: release

2009-05-19 12:30
	* : Use GError in the get brightness method.

2009-05-19 12:00
	* : check brightness value and only display relevent values in
	the brightness popup.
	* : Load the brightness object in idle, seems to fix the issue
	of wrong num_level sent from HAL on aspire one machine.
	* : Provides LowBattery DBus signal.
	* : Doesn't show funny estimated battery time to be fully charged
	in case of wrong value estimated.

2009-05-18 19:40
	* : Fix inactivity sleep string in the settings dialog to
	Suspend instead of suspend (same for hibernate).
	* : Change the storage type of some variables used in xfpm-debug.c
	* : some optimization for const fuctions.
	* : use G_GNUC_NORETURN in the xfpm_start and the 
	xfpm_show_version functions.

2009-05-18 18:35
	* : libxfpm/xfpm-notify Remove unused parameter to some functions.
	* : xfpm-debug.h Check if the compiler supports variadic macros.
	
2009-05-17 13:34 Ali aliov@xfce.org 