@@ -45,7 +45,8 @@ typedef enum
     BATTERY_IS_DISCHARGING,
     BATTERY_CHARGE_LOW,
     BATTERY_CHARGE_CRITICAL,
-    BATTERY_NOT_PRESENT
+    BATTERY_NOT_PRESENT,
+    BATTERY_STATE_UNKNOWN
     
 } XfpmBatteryState;
 
