@@ -1,3 +1,7 @@
+2009-05-29: 17:30 Ali aliov@xfce.org
+	*: Fix harmless glib warning when we close the critical notification.
+	*: More verbosity in the battery when debug full is provided.
+
 2009-05-27: 11:00 Ali aliov@xfce.org
 	*: use G_HAVE_ISO_VARARGS to chech if variadic macro are supported
 	*: Fix some English mispelling mistakes in the doc.
